src/test/resources/repos/invalid-binary-desc-subjects/068/244/ed3/068244ed3333b243385c4fc02fe21a277cae3042673455c4799c3113ba061fc8/v1/inventory.json.sha512
4624674d9efc14f923b6695bb8a22fbb55929b0146a426e16058e0bcf5f0daae721cd4d622d59a7023b8903287c3c6ac6b33ede00970c66cceab24e58d8e5a07	inventory.json